syntax = "proto3";

import "anemos/metastore/core/test/v2/version_scope_import.proto";
import "anemos/metastore/core/test/v2/version_scope_import_2.proto";

package anemos.metastore.core.test.v1;

option java_package = "io.anemos.metastore.core.test.v1";

message VersionInValid {
    string field1 = 1;
}